# FourierPrefetch

./: .gitignore  Makefile  baseline_dram_full.json  compile_commands.json  fourier_config.json  logbook.md  output.txt  plot_offsets.py
branch/tage-sc-l/: tage.cc
inc/: custom_util.h
prefetcher/DWT_SIG/: DWT_SIG.cc
prefetcher/berti/: berti.cc
prefetcher/fourier/: DESIGN.md  GOERTZEL.md  REVIEW.md  fourier.cc  fourier.h  improvement.md  transform.h
prefetcher/fourier/tests/: CMakeLists.txt  test_transform.cpp
prefetcher/periodicity_final/: periodicity.cc  transform.h
prefetcher/periodicity_fourier/: periodicity.cc  transform.h
prefetcher/periodicity_fourier_ghb/: periodicity.cc  transform.h
prefetcher/sms/: sms.h
prefetcher/smsfourier/: sms.h  smsfourier.cc  transform.h
src/: dram_controller.cc
